snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.jar.sha256
6ad5a365797dfa1a80d15b28d2b25bae7bea26a9ce64c9fee33d61e2000eef88